@@ -7,10 +7,8 @@ import java.io.FileOutputStream;
 import java.io.InputStream;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -65,6 +63,8 @@ public class Reseeder {
     private static final boolean ENABLE_SU3 = true;
     /** if false, use su3 only, and disable fallback reading directory index and individual dat files */
     private static final boolean ENABLE_NON_SU3 = false;
+    private static final int MIN_RI_WANTED = 100;
+    private static final int MIN_RESEED_SERVERS = 2;
 
     /**
      *  NOTE - URLs that are in both the standard and SSL groups must use the same hostname,
@@ -85,19 +85,39 @@ public class Reseeder {
               //"http://netdb.i2p2.no/"; // Only SU3 (v3) support
               "";
 
-    /** @since 0.8.2 */
+    /**
+     *  The I2P reseed servers are managed by backup (backup@mail.i2p).
+     *  Please contact him for support, change requests, or issues.
+     *  See also the reseed forum http://zzz.i2p/forums/18
+     *  and the reseed setup and testing guide
+     *  https://geti2p.net/en/get-involved/guides/reseed
+     *
+     *  All supported reseed hosts need a corresponding reseed (SU3)
+     *  signing certificate installed in the router.
+     *
+     *  All supported reseed hosts with selfsigned SSL certificates
+     *  need the corresponding SSL certificate installed in the router.
+     *
+     *  While this implementation supports SNI, others may not, so
+     *  SNI requirements are noted.
+     *
+     * @since 0.8.2
+     */
     public static final String DEFAULT_SSL_SEED_URL =
-              "https://reseed.i2p-projekt.de/" + "," + // Only HTTPS
-              //"https://netdb.rows.io:444/" + "," + // Only HTTPS and SU3 (v3) support
-              "https://i2pseed.zarrenspry.info/" + "," + // Only HTTPS and SU3 (v3) support
-              "https://i2p.mooo.com/netDb/" + "," +
-              "https://netdb.i2p2.no/" + "," + // Only SU3 (v3) support, SNI required
-              "https://us.reseed.i2p2.no:444/" + "," +
-              "https://uk.reseed.i2p2.no:444/" + "," +
-              "https://www.torontocrypto.org:8443/" + "," +
-              "https://reseed.i2p.vzaws.com:8443/" + ", " + // Only SU3 (v3) support
-              "https://user.mx24.eu/" + "," + // Only HTTPS and SU3 (v3) support
-              "https://ieb9oopo.mooo.com/"; // Only HTTPS and SU3 (v3) support
+        // newest first, please add new ones at the top
+        //
+        // https url:port, ending with "/"              // certificates/reseed/      // certificates/ssl/          // notes
+        // ----------------------------------           ------------------------     -------------------------     ---------------
+        "https://i2p.manas.ca:8443/"          + ',' +   // zmx_at_mail.i2p.crt       // CA                         // SNI required
+        "https://i2p-0.manas.ca:8443/"        + ',' +   // zmx_at_mail.i2p.crt       // CA                         // SNI required
+        "https://reseed.i2p.vzaws.com:8443/"  + ',' +   // parg_at_mail.i2p.crt      // reseed.i2p.vzaws.com.crt
+        "https://i2p.mooo.com/netDb/"         + ',' +   // bugme_at_mail.i2p.crt     // i2p.mooo.com.crt
+        "https://user.mx24.eu/"               + ',' +   // backup_at_mail.i2p.crt    // user.mx24.eu.crt
+        "https://download.xxlspeed.com/"      + ',' +   // backup_at_mail.i2p.crt    // download.xxlspeed.com.crt  // SNI required
+        "https://netdb.i2p2.no/"              + ',' +   // meeh_at_mail.i2p.crt      // netdb.i2p2.no.crt          // SNI required
+        "https://us.reseed.i2p2.no:444/"      + ',' +   // meeh_at_mail.i2p.crt      // us.reseed.i2p2.no.crt
+        "https://uk.reseed.i2p2.no:444/"      + ',' +   // meeh_at_mail.i2p.crt      // uk.reseed.i2p2.no.crt
+        "https://reseed.i2p-projekt.de/";               // echelon_at_mail.i2p.crt   // reseed.i2p-projekt.de.crt
 
     private static final String SU3_FILENAME = "i2pseeds.su3";
 
@@ -153,7 +173,7 @@ public class Reseeder {
      *  @throws IllegalArgumentException if it doesn't end with zip or su3
      *  @since 0.9.19
      */
-    void requestReseed(URL url) throws IllegalArgumentException {
+    void requestReseed(URI url) throws IllegalArgumentException {
         ReseedRunner reseedRunner = new ReseedRunner(url);
         // set to daemon so it doesn't hang a shutdown
         Thread reseed = new I2PAppThread(reseedRunner, "Reseed", true);
@@ -223,6 +243,9 @@ public class Reseeder {
      *  Since Java 7 or Android 2.3 (API 9),
      *  which is the lowest Android we support anyway.
      *
+     *  Not guaranteed to be correct, e.g. FreeBSD:
+     *  https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=201446
+     *
      *  @since 0.9.20
      */
     private static boolean isSNISupported() {
@@ -239,7 +262,7 @@ public class Reseeder {
         /** bytes per sec for each su3 downloaded */
         private final List<Long> _bandwidths;
         private static final int MAX_DATE_SETS = 2;
-        private final URL _url;
+        private final URI _url;
 
         /**
          *  Start a reseed from the default URL list
@@ -256,7 +279,7 @@ public class Reseeder {
          *  @throws IllegalArgumentException if it doesn't end with zip or su3
          *  @since 0.9.19
          */
-        public ReseedRunner(URL url) throws IllegalArgumentException {
+        public ReseedRunner(URI url) throws IllegalArgumentException {
             String lc = url.getPath().toLowerCase(Locale.US);
             if (!(lc.endsWith(".zip") || lc.endsWith(".su3")))
                 throw new IllegalArgumentException("Reseed URL must end with .zip or .su3");
@@ -412,7 +435,7 @@ public class Reseeder {
         * @return count of routerinfos successfully fetched, or -1 if no valid URLs
         */
         private int reseed(boolean echoStatus) {
-            List<URL> URLList = new ArrayList<URL>();
+            List<URI> URLList = new ArrayList<URI>();
             String URLs = _context.getProperty(PROP_RESEED_URL);
             boolean defaulted = URLs == null;
             boolean SSLDisable = _context.getBooleanProperty(PROP_SSL_DISABLE);
@@ -429,29 +452,29 @@ public class Reseeder {
                     if (!u.endsWith("/"))
                         u = u + '/';
                     try {
-                        URLList.add(new URL(u));
-                    } catch (MalformedURLException mue) {}
+                        URLList.add(new URI(u));
+                    } catch (URISyntaxException mue) {}
                 }
                 Collections.shuffle(URLList, _context.random());
                 if (!SSLDisable && !SSLRequired) {
                     // put the non-SSL at the end of the SSL
-                    List<URL> URLList2 = new ArrayList<URL>();
+                    List<URI> URLList2 = new ArrayList<URI>();
                     tok = new StringTokenizer(DEFAULT_SEED_URL, " ,");
                     while (tok.hasMoreTokens()) {
                         String u = tok.nextToken().trim();
                         if (!u.endsWith("/"))
                             u = u + '/';
                         try {
-                            URLList2.add(new URL(u));
-                        } catch (MalformedURLException mue) {}
+                            URLList2.add(new URI(u));
+                        } catch (URISyntaxException mue) {}
                     }
                     Collections.shuffle(URLList2, _context.random());
                     URLList.addAll(URLList2);
                 }
             } else {
                 // custom list given
-                List<URL> SSLList = new ArrayList<URL>();
-                List<URL> nonSSLList = new ArrayList<URL>();
+                List<URI> SSLList = new ArrayList<URI>();
+                List<URI> nonSSLList = new ArrayList<URI>();
                 StringTokenizer tok = new StringTokenizer(URLs, " ,");
                 while (tok.hasMoreTokens()) {
                     // format tokens
@@ -461,12 +484,12 @@ public class Reseeder {
                     // check if ssl or not then add to respective list
                     if (u.startsWith("https")) {
                         try {
-                            SSLList.add(new URL(u));
-                        } catch (MalformedURLException mue) {}
+                            SSLList.add(new URI(u));
+                        } catch (URISyntaxException mue) {}
                     } else {
                         try {
-                            nonSSLList.add(new URL(u));
-                        } catch (MalformedURLException mue) {}
+                            nonSSLList.add(new URI(u));
+                        } catch (URISyntaxException mue) {}
                     }
                 }
                 // shuffle lists
@@ -482,8 +505,11 @@ public class Reseeder {
             }
             if (!isSNISupported()) {
                 try {
-                    URLList.remove(new URL("https://netdb.i2p2.no/"));
-                } catch (MalformedURLException mue) {}
+                    URLList.remove(new URI("https://i2p.manas.ca:8443/"));
+                    URLList.remove(new URI("https://i2p-0.manas.ca:8443/"));
+                    URLList.remove(new URI("https://download.xxlspeed.com/"));
+                    URLList.remove(new URI("https://netdb.i2p2.no/"));
+                } catch (URISyntaxException mue) {}
             }
             if (URLList.isEmpty()) {
                 System.out.println("No valid reseed URLs");
@@ -501,19 +527,20 @@ public class Reseeder {
         * @param echoStatus apparently always false
         * @return count of routerinfos successfully fetched
         */
-        private int reseed(List<URL> URLList, boolean echoStatus) {
+        private int reseed(List<URI> URLList, boolean echoStatus) {
             int total = 0;
+            int fetched_reseed_servers = 0;
             for (int i = 0; i < URLList.size() && _isRunning; i++) {
                 if (_context.router().gracefulShutdownInProgress()) {
                     System.out.println("Reseed aborted, shutdown in progress");
                     return total;
                 }
-                URL url = URLList.get(i);
+                URI url = URLList.get(i);
                 int dl = 0;
                 if (ENABLE_SU3) {
                     try {
-                        dl = reseedSU3(new URL(url.toString() + SU3_FILENAME), echoStatus);
-                    } catch (MalformedURLException mue) {}
+                        dl = reseedSU3(new URI(url.toString() + SU3_FILENAME), echoStatus);
+                    } catch (URISyntaxException mue) {}
                 }
                 if (ENABLE_NON_SU3) {
                     if (dl <= 0)
@@ -521,8 +548,9 @@ public class Reseeder {
                 }
                 if (dl > 0) {
                     total += dl;
+                    fetched_reseed_servers++;
                     // Don't go on to the next URL if we have enough
-                    if (total >= 100)
+                    if (total >= MIN_RI_WANTED && fetched_reseed_servers >= MIN_RESEED_SERVERS)
                         break;
                     // remove alternate versions if we haven't tried them yet
                     for (int j = i + 1; j < URLList.size(); ) {
@@ -557,7 +585,7 @@ public class Reseeder {
          * @param echoStatus apparently always false
          * @return count of routerinfos successfully fetched
          **/
-        private int reseedOne(URL seedURL, boolean echoStatus) {
+        private int reseedOne(URI seedURL, boolean echoStatus) {
             try {
                 // Don't use context clock as we may be adjusting the time
                 final long timeLimit = System.currentTimeMillis() + MAX_TIME_PER_HOST;
@@ -628,7 +656,7 @@ public class Reseeder {
                             if (fetched % 60 == 0)
                                 System.out.println();
                         }
-                    } catch (Exception e) {
+                    } catch (RuntimeException e) {
                         if (_log.shouldLog(Log.INFO))
                             _log.info("Failed fetch", e);
                         errors++;
@@ -659,7 +687,7 @@ public class Reseeder {
          *  @return count of routerinfos successfully fetched
          *  @since 0.9.14
          **/
-        public int reseedSU3(URL seedURL, boolean echoStatus) {
+        public int reseedSU3(URI seedURL, boolean echoStatus) {
             return reseedSU3OrZip(seedURL, true, echoStatus);
         }
 
@@ -673,7 +701,7 @@ public class Reseeder {
          *  @return count of routerinfos successfully fetched
          *  @since 0.9.19
          **/
-        public int reseedZip(URL seedURL, boolean echoStatus) {
+        public int reseedZip(URI seedURL, boolean echoStatus) {
             return reseedSU3OrZip(seedURL, false, echoStatus);
         }
 
@@ -687,7 +715,7 @@ public class Reseeder {
          *  @return count of routerinfos successfully fetched
          *  @since 0.9.19
          **/
-        private int reseedSU3OrZip(URL seedURL, boolean isSU3, boolean echoStatus) {
+        private int reseedSU3OrZip(URI seedURL, boolean isSU3, boolean echoStatus) {
             int fetched = 0;
             int errors = 0;
             File contentRaw = null;
@@ -869,7 +897,7 @@ public class Reseeder {
             if (ourHash != null && DataHelper.eq(hash, ourHash.getData()))
                 return false;
 
-            URL url = new URL(seedURL + (seedURL.endsWith("/") ? "" : "/") + ROUTERINFO_PREFIX + peer + ROUTERINFO_SUFFIX);
+            URI url = new URI(seedURL + (seedURL.endsWith("/") ? "" : "/") + ROUTERINFO_PREFIX + peer + ROUTERINFO_SUFFIX);
 
             byte data[] = readURL(url);
             if (data == null || data.length <= 0)
@@ -878,7 +906,7 @@ public class Reseeder {
         }
 
         /** @return null on error */
-        private byte[] readURL(URL url) throws IOException {
+        private byte[] readURL(URI url) throws IOException {
             ByteArrayOutputStream baos = new ByteArrayOutputStream(4*1024);
             EepGet get;
             boolean ssl = url.toString().startsWith("https");
@@ -923,7 +951,7 @@ public class Reseeder {
          *  @return null on error
          *  @since 0.9.14
          */
-        private File fetchURL(URL url) throws IOException {
+        private File fetchURL(URI url) throws IOException {
             File out = new File(_context.getTempDir(), "reseed-" + _context.random().nextInt() + ".tmp");
             EepGet get;
             boolean ssl = url.toString().startsWith("https");
